# CreditEngineSolution

./: .env  .gitignore  Dockerfile  TODO.md  docker-compose.yml  env.example  pyproject.toml  readme.md  requirements.txt  sample.json
config/: asgi.py  forms.py  rosetta_urls.py  urls.py  views.py  wsgi.py
config/settings/: common.py  development.py  production.py  staging.py
locale/bn/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/ja/LC_MESSAGES/: django.po
nginx/: Dockerfile  nginx.conf
static/: staticfiles.json
static/assets/css/: LineIcons.3.0.98ebebd1dc35.css  custom.b5258b2217e5.css  custom.css  main.bb4c9d6cfa9c.css
static/assets/js/: ajax-setup.132234abaa97.js  main.ab7bef524b75.js
static/data/: cities.json
static/vendors/weather-icons/: weather-icons.3126e07e0592.css  weather-icons.min.9ebe53457997.css
staticfiles/assets/js/: ajax-setup.js  custom.js
templates/: base.html  license.txt
templates/account/: base.html  email.html  login.html  logout-modal.html  password_change.html  signup.html
templates/components/: footer.html  header.html  hidden-inputs.html  scripts.html  styles.html
templates/pages/: index.html
templates/pages/snippets/index/: weather-widget.html
templates/snippets/: messages.html
templates/snippets/forms/: form-tag.html  form.html
users/: models.py  urls.py  user_factory.py  views.py
users/management/commands/: generate_dummy_data.py
users/templates/users/: lazy-list.html
utils/: city_data_simulator.py  mixins.py  snippets.py  views.py
